--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>phunkd</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    </head>
+
+    <body>
+
+    <!-- navigation / menu -->
+    <nav class="p-sidebar p-collapse p-white p-animate-left" id="mySidebar"><br>
+        <div class="p-container">
+            <a href="./" class="p-hover-grey" title="Home"><img src="http://phunkd.co.za/images/myself.jpg" class="p-round-large width100"></a><br><br>
+            <h4><b>phunkd</b></h4>
+        </div>
+        <div class="p-bar-block">
+            <a href="#portfolio" onclick="p_close()" class="p-bar-item p-button p-padding p-text-teal"><i class="fa fa-th-large fa-fw p-margin-right"></i>PORTFOLIO</a> 
+            <a href="#about" onclick="p_close()" class="p-bar-item p-button p-padding"><i class="fa fa-user fa-fw p-margin-right"></i>ABOUT</a> 
+            <a href="#contact" onclick="p_close()" class="p-bar-item p-button p-padding"><i class="fa fa-envelope fa-fw p-margin-right"></i>CONTACT</a>
+        </div>
+    </nav>
+
+    <!-- !PAGE CONTENT! -->
+    <div>
+
+    
+ 
+    <!-- Footer -->
+    <footer>&copy; 2000 - 2022 phunkd. All Rights Reserved.</footer>
+
+    <!-- End page content -->
+    </div>
+
+    </body>
+</html>
