--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>phunkd</title>
+        <title>Nifty Penguin Magic</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
@@ -13,30 +13,51 @@
     </head>
 
     <body>
+        <header>
+            <div id="topnav">
+                <div>
+                    <img class="blackHeart" src="images/black-heart.png" alt="Nifty Penguin Magic" />
+                    <span>Nifty Penguin Magic</span>
+                </div>
+                <nav>
+                <ul>
+                    <li><a href="#">npm Enterprise</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Solutions</a></li>
+                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Docs</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+                </nav>
+            </div>
+          
+            <div id="npm-search-join-login">
+                <div id="npm-logo"></div>
+                    <form id="npm-search">
+                    <input class="search-field" type="text" name="search" placeholder="Search packages" />
+                    <input class="button search" type="button" name="searchBtn" value="Search">
+                    </form>
+                <div id="join-login">
+                    <a class="button join" href="#">See plans</a>
+                    <a class="button login" href="#">Log In</a>
+                </div>
+            </div>
+        </header>
 
-    <!-- navigation / menu -->
-    <nav class="p-sidebar p-collapse p-white p-animate-left" id="mySidebar"><br>
-        <div class="p-container">
-            <a href="./" class="p-hover-grey" title="Home"><img src="http://phunkd.co.za/images/myself.jpg" class="p-round-large width100"></a><br><br>
-            <h4><b>phunkd</b></h4>
-        </div>
-        <div class="p-bar-block">
-            <a href="#portfolio" onclick="p_close()" class="p-bar-item p-button p-padding p-text-teal"><i class="fa fa-th-large fa-fw p-margin-right"></i>PORTFOLIO</a> 
-            <a href="#about" onclick="p_close()" class="p-bar-item p-button p-padding"><i class="fa fa-user fa-fw p-margin-right"></i>ABOUT</a> 
-            <a href="#contact" onclick="p_close()" class="p-bar-item p-button p-padding"><i class="fa fa-envelope fa-fw p-margin-right"></i>CONTACT</a>
-        </div>
-    </nav>
+        <section id="build_amazing">
+            <h1>Build amazing things</h1>
+            <p>Essential Javascript development tools that help you go to the market faster and build powerful applications using modern open source code.</p>
+            <p>
+                <a class="button seePlans" href="#">See plans</a>
+                <a class="button joinFree" href="#">Join for free</a>
+            </p>
+        </section>
 
-    <!-- !PAGE CONTENT! -->
-    <div>
-
-    
- 
-    <!-- Footer -->
-    <footer>&copy; 2000 - 2022 phunkd. All Rights Reserved.</footer>
-
-    <!-- End page content -->
-    </div>
+        <section id="bring_best">
+            <div id="hexagon"></div>
+            <h2>Bring the best of open source to your company</h2>
+            <p>npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and get more out of the tools your team already knows and loves.</p>
+        </footer>
 
     </body>
 </html>
