--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
         <section id="four_columns">
-            <section id="First_column">
+            <section id="first_column">
                 Zero configuration Create an org, add
                 your team, and start collaborating. Nothing to configure, set up, or manage.
             </section>
@@ -78,6 +78,9 @@
             </section>
         </section>
 
-        <!--
-            Create an Org
--->
+        <div id="creatOrg">
+        <a class="button createOrg" href="#">Create an Org</a>
+        </div>
+
+    </body>
+</html>
