--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <input class="button search" type="button" name="searchBtn" value="Search">
                     </form>
                 <div id="join-login">
-                    <a class="button join" href="#">See plans</a>
+                    <a class="button join" href="#">Join</a>
                     <a class="button login" href="#">Log In</a>
                 </div>
             </div>
@@ -61,26 +61,31 @@
 
         <section id="four_columns">
             <section id="first_column">
-                Zero configuration Create an org, add
-                your team, and start collaborating. Nothing to configure, set up, or manage.
+                <div class="img"></div>
+                <h6>Zero configuration</h6>
+                Create an org, add your team, and start collaborating.<br />
+                Nothing to configure, set up, or manage.
             </section>
             <section id="second_column">
-                Team management Control who has access to
-                what modules within your team namespace using straightforward team management capabilities.
+                <div class="img"></div>
+                <h6>Team management</h6>
+                Control who has access to what modules within your team namespace using straightforward team management capabilities.
             </section>
             <section id="third_column">
-                Familiar features npm Orgs
-                has 100% parity with all the public npm registry features your developers already use.
+                <div class="img"></div>
+                <h6>Familiar features</h6>
+                npm Orgs has 100% parity with all the public npm registry features your developers already use.
             </section>
             <section id="fourth_column">
-                npm audit Enjoy the security
-                auditing features built into the npm client, a zero-friction way to make open source software safer.
+                <div class="img"></div>
+                <h6>npm audit</h6>
+                Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.
             </section>
         </section>
 
-        <div id="creatOrg">
+        <section id="createOrg">
         <a class="button createOrg" href="#">Create an Org</a>
-        </div>
+        </section>
 
     </body>
 </html>
